# video-comparison-player

./: .gitignore  CMakeLists.txt
lib/ffmpeg/: CMakeLists.txt
lib/sdl/: CMakeLists.txt
lib/sdl2/: CMakeLists.txt
lib/vmaf/: CMakeLists.txt
lib/x264/: CMakeLists.txt
lib/x265/: CMakeLists.txt
src/: CMakeLists.txt  cmdutils.c  ffplay.c
v3.1.1/: config.h
